# teracontrol

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
config/: presets.json
configs/: instruments.yaml
configs/experiments/: live_monitor.yaml
src/teracontrol/acquisition/: experiment_worker.py  livestream_worker.py
src/teracontrol/app/: context.py  controller.py  main.py
src/teracontrol/cli/: plot_temp_log.py  temp_logger.py
src/teracontrol/config/: __init__.py  loader.py
src/teracontrol/controllers/: __init__.py  app_controller.py  controller.py  instrument_controller.py  query_controller.py
src/teracontrol/core/: data.py  experiment.py  record.py
src/teracontrol/engines/: __init__.py  capture_engine.py  connection.py  connection_engine.py  experiment_worker.py  field_engine.py  hdf5_writer.py  livestream.py  livestream_engine.py  mercury_query_test_engine.py  query_engine.py  temperature_engine.py
src/teracontrol/experiments/: live_monitor.py  livestream_experiment.py  metadata.py  record.py  sweep.py  sweep_executor.py  time_sweep_executor.py
src/teracontrol/gui/: connection_widget.py  dock_widget.py  instrument_connection.py  live_plot.py  livemonitor_widget.py  livestream_experiment_widget.py  main.py  main_old.py  main_window.py  mercury_query_test_widget.py  query_widget.py  thz_control.py
src/teracontrol/hal/: __init__.py  base.py  generic_mercury.py  itc.py  mercury_ips.py  mercury_itc.py  teraflash.py
src/teracontrol/io/: save_json.py  serialize.py
tests/: monitor_fake_data.py  status_querying.py  sweep_runner.py
(+30 files in other folders)
