[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "teracontrol"
version = "0.1.0"
description = "Research-grade control software for THz-TDS and magneto-THz experiments"
authors = [
    { name = "Nícolas Kawahala" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pyyaml",
    "h5py",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
