[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "teracontrol"
version = "0.1.0"
description = "Research-grade control software for THz-TDS and magneto-THz experiments"
authors = [
    { name = "Nícolas Kawahala" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pyyaml",
    "h5py",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
teracontrol = "teracontrol.app.main:main"
teracontrol-temp-log = "teracontrol.cli.temp_logger:main"
teracontrol-plot-temp-log = "teracontrol.cli.plot_temp_log:main"